--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,17 @@
 [package]
 name = "sdfgen"
 version = "0.4.0"
-authors = [ "Constantin Berhard <sdfgen.8.enormator@xoxy.net>", "Brett Lajzer <brett@brettlajzer.com>" ]
+authors = [
+    "Constantin Berhard <sdfgen.8.enormator@xoxy.net>",
+    "Brett Lajzer <brett@brettlajzer.com>",
+]
 
 [[bin]]
 name = "sdfgen"
 
 [dependencies]
-image = "^0.23.0"
-getopts = "^0.2.21"
-byteorder = "^1.3.4"
-num = "^0.2.1"
-rayon = "^1.3.0"
+image = "0.24.0"
+getopts = "0.2.21"
+byteorder = "1.3.4"
+num = "0.4.0"
+rayon = "1.3.0"
