Upgrade to 2021 edition

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = [
     "Constantin Berhard <sdfgen.8.enormator@xoxy.net>",
     "Brett Lajzer <brett@brettlajzer.com>",
 ]
+edition = "2021"
 
 [[bin]]
 name = "sdfgen"
